--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
       <p>
         For picky eaters, Nutritional Yeast, & Meal Toppers as mealtime mix-ins
-Fortified Nutritional Yeast is an ingredient commonly found in a plethora of cat treats and sometimes food. It is a flavor enhancer as it tastes sort of cheesy. However, while tasty, it is very good for your kittens health. It contains B vitamins, and (other info)
+Fortified Nutritional Yeast is an ingredient commonly found in a plethora of cat treats and sometimes food. It is a flavor enhancer as it tastes sort of cheesy. However, while tasty, it is very good for your kittens health. It contains B vitamins, & has anti-fungal & antibacterial benefits which may help aid in protecting your fur baby from infections.
 Meal toppers or meal mixers are typically liquid based, & add flavor to your kittens food while softening it as well.
       </p>
 
