Update index.html v1
so many typos after you work on your school project get back to this one for the endlessss typossss

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
       </p>
 
       <p>
-        Tiki Baby or Fancy Feast kitten pate kept my kitten happy & content.
+        Tiki Baby or Fancy Feast Kitten Pate kept my kitten happy & content.
       </p>
 
       <p>
@@ -271,10 +271,6 @@ Meal toppers or meal mixers are typically liquid based, & add flavor to your kit
           A litter box.
           Cats, young and old are predisposed to using “litter like” things. So if you find yourself victim to the cat distrubtion system after a late night McDonald's run, something that is "litter-like" will suffice until stores can open in the morning. Plastic boxes, old amazon box deliveries, (lined of course.) ect. will work until you can find an open store.
         
-      </p>
-
-      <p>
-        To view a website that is much more comprehensive please take some time to view <a target="_blank" href='www.kittenlady.org/supplies'>The Kitten Lady's website full of recommendations for bringing home a new adopt.</a>
       </p>
 
       <p>
